AM 6/11/2004
- added event-based simulator in package peersim.edsim
- added transport protocols in package peersim.transport

MJ 3/11/2004:
VERSION 0.2 RELEASED
------------------------------------------------------------------
------------------------------------------------------------------

GJ 3/11/2004
- Added MedianStats class. It extracts the median value from a data collection;
  it subclasses the IncrementalStats class.

MJ 2/11/2004
- changed config parameter name "protocolID" to "protocol" in package
  distributions. Protocol id is an internal concept now, transparent to the
  user and protocol name should be used (which can also be a number of course).

MJ 29/10/2004
- new constructor parameter for OverlayGraph so that setEdge could work in
  an undirected manner (sets opposite edge too). OverlayGraph is interpreted as
  directed, nontheless, because setEdge is not the only way to set edges.
- wireRegularRandom has new config parameter "undirected", which uses the
  feature above 
- new toString to IdleProtocol, 

MJ 25/10/2004
- added method lookupPid to Configuration to make it possible to search
  for a protocol id based on the protocol name

MJ 22/10/2004
- added the possibility of excluding entities that are present in the config
  using a simple config parameter: eg "include observer aa bb 23". This
  works exactly like the order feature only those names that are not listed
  are excluded. [see classdoc of Configuration]
- some more minor refactoring of Simulator and OrderSimulator

MJ 21/10/2004
- some refactoring of the most recent changes for simplification and
  clarification and which include
  - moving order-handling into Configuration and so removing it from the
    rest of the code: now ordering is transparent to Simulator.
  - removing setPid from Configuration and funtionality to assign ID-s to
    protocols names is also moved into Configuration completely. The rest of